# IDPA-Data-Analysis

./: .gitignore  LICENSE  pyproject.toml
idpa_data_analysis/: count_answers.ipynb  jobs.ipynb  privacy_interest.ipynb
